# xm_vision_2018

./: README.md
Vision/: readme.txt
Vision/Calibration/: CMakeLists.txt  calibrate.cpp
Vision/Camera/: CMakeLists.txt  test.cpp
Vision/Camera/lib/: CMakeLists.txt  Camera.cpp  Camera.h
Vision/Processor/: CMakeLists.txt  main.cpp  main2.cpp
Vision/Processor/lib/libprocessor/: CMakeLists.txt  Processor.cpp  Processor.h
Vision/Processor/lib/libssd/: CMakeLists.txt  ssd_detect.cpp  ssd_detect.hpp
Vision/data/: object_name.txt
Vision/data/people_identify/: people_rect.txt  test.py
Vision/models/object/: Readme_first.txt
Vision/models/people/: readme.txt
xm_vision/src/: readme.txt
xm_vision/src/xm_vision/: CMakeLists.txt  package.xml
xm_vision/src/xm_vision/include/: CMakeLists.txt  identify.hpp
xm_vision/src/xm_vision/src/: code_107.cpp  face.py  five_people.py  identify.cpp  object_all.cpp  object_detect.cpp  people_identify.cpp  people_tracking.cpp  take_photos.cpp
xm_vision/src/xm_vision/src/bp/: identify.cpp
